# rust-chat-example

./: Cargo.toml  makefile
mysql/: mysql.yml
src/: main.rs  response.rs
src/api/: login.rs  mod.rs  record.rs  user.rs
src/api/ws/: conn.rs  messages.rs  mod.rs
src/db/: mod.rs  record.rs  user.rs
