[package]
name = "very-simple-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

rbs = { version = "0.1"}
rbatis = { version = "4.0"}

rbdc-mysql={version="0.1"}
once_cell = "1.16.0"
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web-actors = "4.1.0"
actix-files = "0.6.2"

env_logger = "0.10"
log = "0.4"
actix-easy-multipart = "3"
uuid = { version = "0.8", features = ["v4", "serde"] }

serde_json = "1.0.91"